backend can fetch the movies now

--- a/server/movielist/src/main/resources/application.properties
+++ b/server/movielist/src/main/resources/application.properties
@@ -9,8 +9,12 @@ spring.datasource.password=admin123
 #JPA/ Hibernate config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-#TMDb API Key
 
-API_KEY=b9883c72e49ac8961800e206e8f281c7;
+##TMDb API Key
+#
+#API_KEY=b9883c72e49ac8961800e206e8f281c7;
+
+tmdb.api.key=b9883c72e49ac8961800e206e8f281c7
+tmdb.api.url=https://api.themoviedb.org/3
